--- a/nfl-wallet-prod/templates/bluegreen-httproute.yaml
+++ b/nfl-wallet-prod/templates/bluegreen-httproute.yaml
@@ -6,6 +6,8 @@ kind: HTTPRoute
 metadata:
   name: nfl-wallet-bluegreen
   namespace: {{ .Release.Namespace }}
+  annotations:
+    argocd.argoproj.io/ignore-healthcheck: "true"
   labels:
     app.kubernetes.io/name: nfl-wallet
     app.kubernetes.io/instance: {{ .Release.Name }}
