--- a/docs/argocd-cluster-secrets-manual.yaml
+++ b/docs/argocd-cluster-secrets-manual.yaml
@@ -1,11 +1,12 @@
 # ---------------------------------------------------------------------------
 # Optional: Argo CD cluster secrets for east and west (use on the HUB if
 # GitOpsCluster does not create them and you see "there are no clusters with
-# this name: west").
+# this name: west" or east).
 #
-# If west Applications show "the server has asked for the client to provide
-# credentials", the west cluster secret has invalid/expired credentials. Update
-# the secret with a valid bearerToken (see below) or recreate it from this file.
+# Sync fails with "failed to discover server resources ... Unauthorized" or
+# "the server has asked for the client to provide credentials" when the
+# cluster secret (east or west) has invalid/expired bearerToken. Update the
+# secret for that cluster and restart the application controller (see below).
 #
 # Apply on the HUB: kubectl apply -f docs/argocd-cluster-secrets-manual.yaml
 # You must set the bearerToken for each cluster (e.g. from ACM managed cluster
@@ -17,10 +18,11 @@
 #   argocd cluster add <context-from-kubeconfig> --name east --server https://api....
 #   That will create the secret for you; or copy the bearerToken from the generated secret.
 #
-# Update existing west secret with new token (replace TOKEN with a valid token for west cluster):
-#   kubectl patch secret -n openshift-gitops -l argocd.argoproj.io/secret-type=cluster --type='json' -p='[{"op":"replace","path":"/data/config","value":"'$(echo -n '{"tlsClientConfig":{"insecure":true},"bearerToken":"TOKEN"}' | base64 -w0)'"}]}'
-#   Or edit: kubectl edit secret <cluster-west-secret-name> -n openshift-gitops (config is base64).
-#   After updating the secret, restart the application controller to reload cluster credentials:
+# Update existing secret (east or west) with new token — replace SECRET_NAME and TOKEN:
+#   SECRET_NAME=cluster-east   # or cluster-west
+#   kubectl patch secret -n openshift-gitops $SECRET_NAME --type='json' -p='[{"op":"replace","path":"/data/config","value":"'$(echo -n '{"tlsClientConfig":{"insecure":true},"bearerToken":"TOKEN"}' | base64 -w0)'"}]}'
+#   Or edit: kubectl edit secret cluster-east -n openshift-gitops (then base64-encode the new config).
+#   After updating, restart the application controller to reload credentials:
 #   kubectl rollout restart statefulset/openshift-gitops-application-controller -n openshift-gitops
 # ---------------------------------------------------------------------------
 apiVersion: v1
